--- a/TTNote/app/src/main/AndroidManifest.xml
+++ b/TTNote/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".TaskNoteAdditionActivity"></activity>
         <activity
             android:name=".SearchActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".NoteAdditionActivity"
             android:theme="@style/AppTheme.NoActionBar" />
