--- a/TTNote/app/src/main/AndroidManifest.xml
+++ b/TTNote/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ttnote">
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TaskNoteAdditionActivity"></activity>
+        <activity android:name=".RemindNoteAdditionActivity"></activity>
+        <activity android:name=".TaskNoteAdditionActivity" />
         <activity
-            android:name=".SearchActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".SearchActivity"/>
         <activity
-            android:name=".NoteAdditionActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".NoteAdditionActivity"/>
         <activity
             android:name=".MainActivity"
+            android:launchMode="singleTop"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -26,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".AlarmReceiver" />
     </application>
 
 </manifest>
