--- a/TTNote/app/src/main/AndroidManifest.xml
+++ b/TTNote/app/src/main/AndroidManifest.xml
@@ -2,19 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ttnote">
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_laucher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RemindNoteAdditionActivity"></activity>
-        <activity android:name=".TaskNoteAdditionActivity" />
+        <activity
+            android:name=".RemindNoteAdditionActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:launchMode="singleTop"/>
+        <activity
+            android:name=".TaskNoteAdditionActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity
             android:name=".SearchActivity"/>
         <activity
-            android:name=".NoteAdditionActivity"/>
+            android:name=".NoteAdditionActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
