--- a/TTNote/app/src/main/AndroidManifest.xml
+++ b/TTNote/app/src/main/AndroidManifest.xml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ttnote">
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_laucher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".DeletedNoteActivity"></activity>
+        <activity
+            android:name=".AlarmActivity"
+            android:showOnLockScreen="true"
+            android:turnScreenOn="true" />
         <activity
             android:name=".RemindNoteAdditionActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".TaskNoteAdditionActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"/>
-        <activity
-            android:name=".SearchActivity"/>
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".SearchActivity" />
         <activity
             android:name=".NoteAdditionActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"/>
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleTop"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,6 +38,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver android:name=".AlarmReceiver" />
     </application>
 
