--- a/TTNote/app/src/main/AndroidManifest.xml
+++ b/TTNote/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeletedNoteActivity"></activity>
+        <activity android:name=".Main2Activity"></activity>
+        <activity android:name=".AboutUsActivity" />
+        <activity android:name=".DeletedNoteActivity" />
         <activity
             android:name=".AlarmActivity"
             android:showOnLockScreen="true"
